--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 SQLAlchemy==1.4.46
-python-dotenv==0.21.0
+python-dotenv==0.21.1
 fastapi==0.89.1
 uvicorn==0.20.0
 pytest==7.2.1
 pydantic~=1.10.4
+pytest-asyncio==0.20.3
